# sagarmatha-control-center

./: README  README.md  autogen.sh  configure.ac  generate_additional_files.py  grep.sh  makepot  sagarmatha-control-center.pot
debian/: changelog  control  control.in  libsagarmatha-control-center-dev.install  libsagarmatha-control-center1.install  libsagarmatha-control-center1.symbols  rules  sagarmatha-control-center-data.install  sagarmatha-control-center.install  sagarmatha-control-center.links  sagarmatha-control-center.menu  sagarmatha-control-center.xpm  source_sagarmatha-control-center.py
debian/patches/: 10_keyboard_layout_on_unity.patch  11_power-configure_lid_action.patch  51_unity_options_in_display_panel.patch  52_ubuntu_language_list_mods.patch  53_use_ubuntu_help.patch  54_enable_alt_tap_in_shortcut.patch  55_user_accounts_hide_controls.patch  57_use_nonsymbolic_keyboard_icon.patch  58_hide_gdm_notifications.patch  58_ubuntu_icon_views_redesign.patch  60_ubuntu_nav_bar.patch  61_workaround_online_account.patch  62_update_translations_template.patch  64_restore_terminal_keyboard_shortcut.patch  97_unity_power_ui.patch  accounts_fix_unsetting_icon.patch  classic_use_sound_indicator.patch  deal_with_null_ssid.patch  revert_git_datetime_port.patch  revert_git_drop_library.patch  revert_new_ibus_keyboard_use.patch  sound_nua_panel.patch
panels/color/: Makefile.am  cc-color-panel.c  sagarmatha-color-panel.desktop.in.in
panels/common/: Makefile.am  gdm-languages.c
panels/datetime/: Makefile.am  cc-datetime-panel.c  datetime-module.c  dtm.c  dtm.h  sagarmatha-datetime-panel.desktop.in.in  set-timezone.c  tz.c
panels/display/: Makefile.am  cc-display-panel.c  cc-rr-labeler.h  sagarmatha-display-panel.desktop.in.in
panels/network/: Makefile.am  cc-network-panel.c  net-device-mobile.c  net-device-wifi.c  net-device-wired.c  net-proxy.c  net-vpn.c  sagarmatha-network-panel.desktop.in.in
panels/power/: Makefile.am  cc-power-panel.c  sagarmatha-power-panel.desktop.in.in
panels/region/: Makefile.am  cc-region-panel.c  sagarmatha-region-panel-xkb.c  sagarmatha-region-panel-xkb.h  sagarmatha-region-panel-xkblt.c  sagarmatha-region-panel-xkbltadd.c  sagarmatha-region-panel-xkbot.c  sagarmatha-region-panel-xkbpv.c  sagarmatha-region-panel.desktop.in.in
panels/screen/: Makefile.am  cc-screen-panel.c  sagarmatha-screen-panel.desktop.in.in
panels/sound/: Makefile.am  applet-main.c  cc-sound-panel.c  gvc-applet.c  gvc-stream-status-icon.c
panels/sound-nua/: Makefile.am  cc-sound-panel.c  gvc-mixer-dialog.c
panels/sound-nua/data/: Makefile.am  sagarmatha-sound-nua-panel.desktop.in.in
panels/sound/data/: Makefile.am  sagarmatha-sound-applet.desktop.in  (+1 more)
panels/universal-access/: Makefile.am  cc-ua-panel.c  sagarmatha-universal-access-panel.desktop.in.in  zoom-options.c
panels/wacom/: Makefile.am  cc-wacom-mapping-panel.c  cc-wacom-page.c  cc-wacom-panel.c  cc-wacom-stylus-page.c  csd-enums.h  csd-input-helper.c  csd-wacom-device.c  sagarmatha-wacom-panel.desktop.in.in  test-wacom.c  wacom.gresource.xml
po/: POTFILES.in  POTFILES.skip
shell/: Makefile.am  cc-shell-model.c  cc-shell.h  control-center.c  libsagarmatha-control-center.pc.in  sagarmatha-control-center.c  sagarmatha-control-center.desktop.in.in  sagarmatha-control-center.h  sagarmathacc.menu.in
unused-panels/background/: Makefile.am  background-module.c  bg-colors-source.c  bg-flickr-source.c  bg-pictures-source.c  bg-wallpapers-source.c  cc-background-chooser-dialog.c  cc-background-item.c  cc-background-item.h  cc-background-panel.c  cc-background-xml.c  cc-background-xml.h  gdesktop-enums-types.c  gdesktop-enums-types.h  sagarmatha-background-panel.desktop.in.in
unused-panels/info/: Makefile.am  cc-info-panel.c  info-module.c  info.ui  sagarmatha-info-panel.desktop.in.in
unused-panels/keyboard/: Makefile.am  keyboard-module.c
unused-panels/mouse/: Makefile.am  cc-mouse-panel.c  mouse-module.c  sagarmatha-mouse-panel.desktop.in.in  sagarmatha-mouse-properties.c  sagarmatha-mouse-test.c  test-sagarmatha-mouse-test.c
unused-panels/online-accounts/: Makefile.am  cc-online-accounts-panel.c  sagarmatha-online-accounts-panel.desktop.in.in
unused-panels/printers/: Makefile.am  cc-printers-panel.c  pp-jobs-dialog.c  printers-module.c  sagarmatha-printers-panel.desktop.in.in
unused-panels/user-accounts/: Makefile.am  org.sagarmatha.controlcenter.user-accounts.policy.in  run-passwd.c  run-passwd.h  um-fingerprint-dialog.c  um-fingerprint-dialog.h  um-photo-dialog.c  um-user-panel.c
unused-panels/wacom/: Makefile.am  cc-wacom-mapping-panel.c  cc-wacom-page.c  cc-wacom-panel.c  cc-wacom-stylus-page.c  gsd-input-helper.c  gsd-wacom-device.c  sagarmatha-wacom-panel.desktop.in.in  test-wacom.c  wacom-module.c
(+27 files in other folders)
